<resources>
    <string name="app_name">Twenkid Reader 0.1</string>
    <string name="menu_addfave">Add Favorites</string>
    <string name="menu_removefave">Remove Favorites</string>
    <string name="menu_workoffline">Work Offline</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_read">Read</string>    
    <string name="menu_deletefromcache">Delete from Cache?</string>
    <string name="menu_stringOK">OK</string>
    <string name="menu_stringYes">Yes</string>
    <string name="menu_stringNo">No</string>
    <string name="feed_address">http://feeds.feedburner.com/Mobilecrunch</string>
    <string name="menu_savecache">Save Cache</string>
    <string name="menu_loadcache">Load Cache</string>
    <string name="menu_killapp">Kill Application</string>
    <string name="menu_workonline">Go Online</string>
    <string name="menu_useimagecache">Use Image Cache</string>
    <string name="menu_dontuseimagecache">Don\'t Use Image Cache</string>        
</resources>